--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,8 @@ h3 {
     font-family: 'Bangers', cursive;
 }
 
-/* SEARCH SECTION #searchBar #searchBtn */
-#searchHistory {
+/* SEARCH SECTION #searchCity #searchBtn */
+#searchedCities {
     font-family: 'Gloria Hallelujah', cursive;
 }
 
